--- a/churchinfo/Include/ChurchCRM.css
+++ b/churchinfo/Include/ChurchCRM.css
@@ -1,5 +1,5 @@
 /* Make tables scrollable in x-direction */
-table.table {
+table.horizontal-scroll {
     display: block;
     overflow-x: scroll;
 }
