--- a/churchinfo/skin/churchcrm.scss
+++ b/churchinfo/skin/churchcrm.scss
@@ -18,7 +18,7 @@
 @import 'adminlte/plugins/select2/select2.css';
 @import 'adminlte/plugins/datepicker/datepicker3.css';
 @import 'adminlte/plugins/timepicker/bootstrap-timepicker.css';
-@import 'font-awesome/scss/font-awesome';
+@import 'font-awesome/css/font-awesome.css';
 @import 'ionicons/css/ionicons.css';
 
 
