- renamed ChurchInfo to ChurchCRM where needed - update folder usage from churchinfo to src

--- a/src/skin/churchcrm.scss
+++ b/src/skin/churchcrm.scss
@@ -2,7 +2,7 @@
 
     Please make changes to skin/scss/*.scss and recompile with SASS. http://sass-lang.com/
 
-    sass --watch churchinfo/skin/churchcrm.scss:churchinfo/skin/churchcrm.min.css --style compressed
+    sass --watch src/skin/churchcrm.scss:src/skin/churchcrm.min.css --style compressed
 
 */
 
