--- a/src/skin/churchcrm.scss
+++ b/src/skin/churchcrm.scss
@@ -13,14 +13,13 @@
 // and we don't want to incur IE's CSS limits.
 // ( http://spaceninja.com/2015/03/31/ie-css-limits/ )
 
-@import 'adminlte/dist/css/AdminLTE.css';
-@import 'adminlte/dist/css/skins/_all-skins.css';
-@import 'adminlte/plugins/select2/select2.css';
-@import 'adminlte/plugins/datepicker/datepicker3.css';
-@import 'adminlte/plugins/timepicker/bootstrap-timepicker.css';
-@import 'font-awesome/css/font-awesome.css';
-@import 'ionicons/css/ionicons.css';
-
+@import '../vendor/almasaeed2010/adminlte/dist/css/AdminLTE.css';
+@import '../vendor/almasaeed2010/adminlte/dist/css/skins/_all-skins.css';
+@import '../vendor/almasaeed2010/adminlte/plugins/select2/select2.css';
+@import '../vendor/almasaeed2010/adminlte/plugins/datepicker/datepicker3.css';
+@import '../vendor/almasaeed2010/adminlte/plugins/timepicker/bootstrap-timepicker.css';
+@import '../vendor/components/font-awesome/css/font-awesome.css';
+@import '../vendor/driftyco/ionicons/css/ionicons.css';
 
 // Import ChurchCRM custom styles
 
